Avoid custom/unregistered token in channel open
Tokens must be registered before we're able to open a channel using it.
Proper dialog for token registry will be added in the future.

--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -73,7 +73,7 @@
             <div class="ui-grid-col-8">
                 <p-dropdown [options]="tokenAddressMapping" [(ngModel)]="tempChannel.token_address"
                     id="token" placeholder="Select a Token" [style]="{'width':'100%'}"
-                    editable="editable" appendTo="body" autoWidth="false" [filter]="true" >
+                    appendTo="body" autoWidth="false" [filter]="true" >
                 </p-dropdown>
             </div>
         </div>
