Full removal of Material dependency

--- a/raiden/raidenwebui/src/app/app.component.html
+++ b/raiden/raidenwebui/src/app/app.component.html
@@ -27,11 +27,9 @@
         </ul>
     </div>
 </div>
-<div class="container" id="main">
-    <div class="row">
-        <div class="col-md-12">
-          <router-outlet></router-outlet>
-          <!-- Routed views go here -->
-        </div>
+<div class="ui-g" id="main">
+    <div class="ui-g-12">
+      <router-outlet></router-outlet>
+      <!-- Routed views go here -->
     </div>
 </div>
