--- a/raiden/raidenwebui/src/styles.css
+++ b/raiden/raidenwebui/src/styles.css
@@ -1,7 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~https://fonts.googleapis.com/icon?family=Material+Icons';
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-
 .top5 { margin-top:5px; }
 .top7 { margin-top:7px; }
 .top10 { margin-top:10px; }
@@ -16,7 +13,7 @@
 .bottom17 { margin-bottom:17px; }
 .bottom30 { margin-bottom:30px; }
 
-html, body, material-app, md-sidenav-container, .my-content {
+html, body, .my-content {
   margin: 0;
   width: 100%;
   height: 100%;
