CSS fixes after removing material

--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -1,4 +1,4 @@
-<p-tabView class="ui-g">
+<p-tabView class="ui-g-12">
   <p-tabPanel header="Channels">
     <div *ngIf="channels?.length > 0; then channelData else msg"></div>
     <ng-template #channelData>
