--- a/raiden/raidenwebui/src/app/app.component.html
+++ b/raiden/raidenwebui/src/app/app.component.html
@@ -2,14 +2,13 @@
   <a>Raiden</a>
   <a>{{raidenAddress}}</a>
   <a>Participate Now</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <div class="nav-side-menu">
     <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
     <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out">
             <li>
-                <a href="#">
+                <a routerLink='/home' routerLinkActive="active">
                     <i class="fa fa-dashboard fa-lg"></i>Home
                 </a>
             </li>
