--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -37,7 +37,10 @@
   <div class="ui-grid ui-grid-responsive ui-fluid">
     <div class="ui-grid-row">
       <div class="ui-grid-col-4"><label for="amount">Enter amount to {{action}}</label></div>
-      <div class="ui-grid-col-8"><input pInputText id="amount" [(ngModel)]="amount"/></div>
+      <div class="ui-grid-col-8">
+          <input pInputText type="number" id="amount" [(ngModel)]="amount"
+          required class="ui-inputtext ui-corner-all ui-state-default"/>
+      </div>
     </div>
   </div>
   <p-footer>
@@ -47,13 +50,19 @@
   </p-footer>
 </p-dialog>
 
-<p-dialog header="Open Channel" [(visible)]="displayChannelDialog" [responsive]="true" showEffect="fade" [modal]="true">
+<p-dialog header="Open Channel" [(visible)]="displayChannelDialog" [responsive]="true"
+    showEffect="fade" [modal]="true" width="600">
     <div class="ui-grid ui-grid-responsive ui-fluid">
         <div class="ui-grid-row">
             <div class="ui-grid-col-4"><label for="partner">Partner Address</label></div>
-            <div class="ui-grid-col-8"><input pInputText id="partner" [(ngModel)]="tempChannel.partner_address" /></div>
+            <div class="ui-grid-col-8">
+              <input pInputText type="text" id="partner" [(ngModel)]="tempChannel.partner_address"
+                class="ui-inputtext ui-corner-all ui-state-default"
+                placeholder="0x0000000000000000000000000000000000000000"
+                required pattern="^0x[0-9a-fA-F]{40}$" minlength="42" maxlength="42"/>
         </div>
-        <div class="ui-grid-row">
+        </div>
+        <div class="ui-grid-row top10">
             <div class="ui-grid-col-4"><label for="token">Token</label></div>
             <div class="ui-grid-col-8">
                 <p-dropdown [options]="tokenAddressMapping" [(ngModel)]="tempChannel.token_address"
@@ -62,13 +71,19 @@
                 </p-dropdown>
             </div>
         </div>
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-4 top10 "><label for="balance">Balance</label></div>
-            <div class="ui-grid-col-8 top10 "><input pInputText id="balance" [(ngModel)]="tempChannel.balance" type="number"/></div>
+        <div class="ui-grid-row top10">
+            <div class="ui-grid-col-4"><label for="balance">Balance</label></div>
+            <div class="ui-grid-col-8">
+                <input pInputText type="number" id="balance" [(ngModel)]="tempChannel.balance"
+                  required class="ui-inputtext ui-corner-all ui-state-default"/>
+              </div>
         </div>
-        <div class="ui-grid-row">
+        <div class="ui-grid-row top10">
             <div class="ui-grid-col-4"><label for="settle">Settle Timeout</label></div>
-            <div class="ui-grid-col-8"><input pInputText id="settle" [(ngModel)]="tempChannel.settle_timeout" type="number"/></div>
+            <div class="ui-grid-col-8">
+                <input pInputText type="number" id="settle" [(ngModel)]="tempChannel.settle_timeout"
+                  required class="ui-inputtext ui-corner-all ui-state-default"/>
+            </div>
         </div>
     </div>
     <p-footer>
