Use SharedService for notification messages

--- a/raiden/raidenwebui/src/app/app.component.html
+++ b/raiden/raidenwebui/src/app/app.component.html
@@ -31,4 +31,6 @@
       <router-outlet></router-outlet>
       <!-- Routed views go here -->
     </div>
+
+    <p-growl [(value)]="sharedService.messages"></p-growl>
 </div>
