--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -6,24 +6,19 @@
     <div *ngIf="channels?.length > 0; then channelData else msg"></div>
     <ng-template #channelData>
       <p-dataTable [value]="channels" class="ui-g-12">
-          <p-column field="channel_address" header="Channel"></p-column>
-          <p-column field="partner_address" header="Partner"></p-column>
-          <p-column field="token_address" header="Token"></p-column>
-          <p-column field="balance" header="Balance"
-          [style]="{width: '70px', 'text-align': 'center'}"></p-column>
-          <p-column field="state" header="State"
-          [style]="{width: '70px', 'text-align': 'center'}"></p-column>
-          <p-column field="settle_timeout" header="SettleTimeout"
-          [style]="{width: '100px', 'text-align': 'center'}"></p-column>
-          <p-column field="reveal_timeout" header="RevealTimeout"
-          [style]="{width: '100px', 'text-align': 'center'}"></p-column>
-          <p-column [style]="{width: '100px', 'text-align': 'center'}">
-            <ng-template let-channel="rowData" pTemplate="body">
-              <p-menu #menu popup="popup" [model]="menuFor(channel)" appendTo="body" ></p-menu>
-              <button pButton #menuButton type="button" icon="fa-ellipsis-v"
-                class="ui-button-secondary" (click)="menu.toggle($event)"></button>
-            </ng-template>
-          </p-column>
+        <p-column field="channel_address" header="Channel"></p-column>
+        <p-column field="partner_address" header="Partner"></p-column>
+        <p-column field="token_address" header="Token"></p-column>
+        <p-column field="balance" header="Balance" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
+        <p-column field="state" header="State" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
+        <p-column field="settle_timeout" header="SettleTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
+        <p-column field="reveal_timeout" header="RevealTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
+        <p-column [style]="{width: '100px', 'text-align': 'center'}">
+          <ng-template let-channel="rowData" pTemplate="body">
+            <p-menu #menu popup="popup" [model]="menuFor(channel)" appendTo="body"></p-menu>
+            <button pButton #menuButton type="button" icon="fa-ellipsis-v" class="ui-button-secondary" (click)="menu.toggle($event)"></button>
+          </ng-template>
+        </p-column>
       </p-dataTable>
     </ng-template>
     <ng-template #msg>You have no Channels yet.</ng-template>
@@ -38,8 +33,7 @@
     <div class="ui-grid-row">
       <div class="ui-grid-col-4"><label for="amount">Enter amount to {{action}}</label></div>
       <div class="ui-grid-col-8">
-          <input pInputText type="number" id="amount" [(ngModel)]="amount"
-          required class="ui-inputtext ui-corner-all ui-state-default"/>
+        <input pInputText type="number" id="amount" [(ngModel)]="amount" required class="ui-inputtext ui-corner-all ui-state-default" />
       </div>
     </div>
   </div>
@@ -50,45 +44,37 @@
   </p-footer>
 </p-dialog>
 
-<p-dialog header="Open Channel" [(visible)]="displayChannelDialog" [responsive]="true"
-    showEffect="fade" [modal]="true" width="600">
-    <div class="ui-grid ui-grid-responsive ui-fluid">
-        <div class="ui-grid-row">
-            <div class="ui-grid-col-4"><label for="partner">Partner Address</label></div>
-            <div class="ui-grid-col-8">
-              <input pInputText type="text" id="partner" [(ngModel)]="tempChannel.partner_address"
-                class="ui-inputtext ui-corner-all ui-state-default"
-                placeholder="0x0000000000000000000000000000000000000000"
-                required pattern="^0x[0-9a-fA-F]{40}$" minlength="42" maxlength="42"/>
-        </div>
-        </div>
-        <div class="ui-grid-row top10">
-            <div class="ui-grid-col-4"><label for="token">Token</label></div>
-            <div class="ui-grid-col-8">
-                <p-dropdown [options]="tokenAddressMapping" [(ngModel)]="tempChannel.token_address"
-                    id="token" placeholder="Select a Token" [style]="{'width':'100%'}"
-                    appendTo="body" autoWidth="false" [filter]="true" >
-                </p-dropdown>
-            </div>
-        </div>
-        <div class="ui-grid-row top10">
-            <div class="ui-grid-col-4"><label for="balance">Balance</label></div>
-            <div class="ui-grid-col-8">
-                <input pInputText type="number" id="balance" [(ngModel)]="tempChannel.balance"
-                  required class="ui-inputtext ui-corner-all ui-state-default"/>
-              </div>
-        </div>
-        <div class="ui-grid-row top10">
-            <div class="ui-grid-col-4"><label for="settle">Settle Timeout</label></div>
-            <div class="ui-grid-col-8">
-                <input pInputText type="number" id="settle" [(ngModel)]="tempChannel.settle_timeout"
-                  required class="ui-inputtext ui-corner-all ui-state-default"/>
-            </div>
-        </div>
+<p-dialog header="Open Channel" [(visible)]="displayChannelDialog" [responsive]="true" showEffect="fade" [modal]="true" width="600">
+  <div class="ui-grid ui-grid-responsive ui-fluid">
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4"><label for="partner">Partner Address</label></div>
+      <div class="ui-grid-col-8">
+        <input pInputText type="text" id="partner" [(ngModel)]="tempChannel.partner_address" class="ui-inputtext ui-corner-all ui-state-default" placeholder="0x0000000000000000000000000000000000000000" required pattern="^0x[0-9a-fA-F]{40}$" minlength="42" maxlength="42"
+        />
+      </div>
     </div>
-    <p-footer>
-        <div class="ui-dialog-buttonpane ui-helper-clearfix">
-            <button type="button" pButton icon="" (click)="manageChannel()" label="Open"></button>
-        </div>
-    </p-footer>
+    <div class="ui-grid-row top10">
+      <div class="ui-grid-col-4"><label for="token">Token</label></div>
+      <div class="ui-grid-col-8">
+        <p-dropdown [options]="tokenAddressMapping" [(ngModel)]="tempChannel.token_address" id="token" placeholder="Select a Token" [style]="{'width':'100%'}" appendTo="body" autoWidth="false" [filter]="true"></p-dropdown>
+      </div>
+    </div>
+    <div class="ui-grid-row top10">
+      <div class="ui-grid-col-4"><label for="balance">Balance</label></div>
+      <div class="ui-grid-col-8">
+        <input pInputText type="number" id="balance" [(ngModel)]="tempChannel.balance" required class="ui-inputtext ui-corner-all ui-state-default" />
+      </div>
+    </div>
+    <div class="ui-grid-row top10">
+      <div class="ui-grid-col-4"><label for="settle">Settle Timeout</label></div>
+      <div class="ui-grid-col-8">
+        <input pInputText type="number" id="settle" [(ngModel)]="tempChannel.settle_timeout" required class="ui-inputtext ui-corner-all ui-state-default" />
+      </div>
+    </div>
+  </div>
+  <p-footer>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+      <button type="button" pButton icon="" (click)="manageChannel()" label="Open"></button>
+    </div>
+  </p-footer>
 </p-dialog>
