--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -6,9 +6,21 @@
     <div *ngIf="channels?.length > 0; then channelData else msg"></div>
     <ng-template #channelData>
       <p-dataTable [value]="channels" class="ui-g-12">
-        <p-column field="channel_address" header="Channel"></p-column>
-        <p-column field="partner_address" header="Partner"></p-column>
-        <p-column field="token_address" header="Token"></p-column>
+        <p-column field="channel_address" header="Channel">
+          <ng-template let-col let-data="rowData" pTemplate="body">
+            <span [title]="data[col.field]">{{ data[col.field] }}</span>
+          </ng-template>
+        </p-column>
+        <p-column field="partner_address" header="Partner">
+          <ng-template let-col let-data="rowData" pTemplate="body">
+            <span [title]="data[col.field]">{{ data[col.field] }}</span>
+          </ng-template>
+        </p-column>
+        <p-column field="token_address" header="Token">
+          <ng-template let-col let-data="rowData" pTemplate="body">
+            <span [title]="data[col.field]">{{ data[col.field] }}</span>
+          </ng-template>
+        </p-column>
         <p-column field="balance" header="Balance" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
         <p-column field="state" header="State" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
         <p-column field="settle_timeout" header="SettleTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
