--- a/raiden/ui/web/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/ui/web/src/app/components/channel-table/channel-table.component.html
@@ -3,37 +3,33 @@
     <div class="ui-g-12">
       <button type="text" (click)="onOpen()" pButton icon="fa-external-link-square" label="Open Channel"></button>
     </div>
-    <div *ngIf="channels?.length > 0; then channelData else msg"></div>
-    <ng-template #channelData>
-      <p-dataTable [value]="channels" class="ui-g-12">
-        <p-column field="channel_address" header="Channel">
-          <ng-template let-col let-data="rowData" pTemplate="body">
-            <span [title]="data[col.field]">{{ data[col.field] }}</span>
-          </ng-template>
-        </p-column>
-        <p-column field="partner_address" header="Partner">
-          <ng-template let-col let-data="rowData" pTemplate="body">
-            <span [title]="data[col.field]">{{ data[col.field] }}</span>
-          </ng-template>
-        </p-column>
-        <p-column field="token_address" header="Token">
-          <ng-template let-col let-data="rowData" pTemplate="body">
-            <span [title]="data[col.field]">{{ data[col.field] }}</span>
-          </ng-template>
-        </p-column>
-        <p-column field="balance" header="Balance" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
-        <p-column field="state" header="State" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
-        <p-column field="settle_timeout" header="SettleTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
-        <p-column field="reveal_timeout" header="RevealTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
-        <p-column [style]="{width: '100px', 'text-align': 'center'}">
-          <ng-template let-channel="rowData" pTemplate="body">
-            <p-menu #menu popup="popup" [model]="menuFor(channel)" appendTo="body"></p-menu>
-            <button pButton #menuButton type="button" icon="fa-ellipsis-v" class="ui-button-secondary" (click)="menu.toggle($event)"></button>
-          </ng-template>
-        </p-column>
-      </p-dataTable>
-    </ng-template>
-    <ng-template #msg>You have no Channels yet.</ng-template>
+    <p-dataTable [value]="channels$ | async" class="ui-g-12" resizableColumns="true">
+      <p-column field="channel_address" header="Channel">
+        <ng-template let-col let-data="rowData" pTemplate="body">
+          <span [title]="data[col.field]">{{ data[col.field] }}</span>
+        </ng-template>
+      </p-column>
+      <p-column field="partner_address" header="Partner">
+        <ng-template let-col let-data="rowData" pTemplate="body">
+          <span [title]="data[col.field]">{{ data[col.field] }}</span>
+        </ng-template>
+      </p-column>
+      <p-column field="token_address" header="Token">
+        <ng-template let-col let-data="rowData" pTemplate="body">
+          <span [title]="data[col.field]">{{ data[col.field] }}</span>
+        </ng-template>
+      </p-column>
+      <p-column field="balance" header="Balance" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
+      <p-column field="state" header="State" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
+      <p-column field="settle_timeout" header="SettleTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
+      <p-column field="reveal_timeout" header="RevealTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
+      <p-column [style]="{width: '100px', 'text-align': 'center'}">
+        <ng-template let-channel="rowData" pTemplate="body">
+          <p-menu #menu popup="popup" [model]="menuFor(channel)" appendTo="body"></p-menu>
+          <button pButton #menuButton type="button" icon="fa-ellipsis-v" class="ui-button-secondary" (click)="menu.toggle($event)"></button>
+        </ng-template>
+      </p-column>
+    </p-dataTable>
   </p-tabPanel>
 
   <p-tabPanel *ngFor="let eventsParam of watchEvents" [header]="eventsParam.channel ? 'Channel Events: '+eventsParam.channel : 'Network Events'" [closable]="!!eventsParam.channel" [leftIcon]="eventsParam.activity ? 'fa-bell' : ''">
@@ -69,7 +65,7 @@
     <div class="ui-grid-row top10">
       <div class="ui-grid-col-4"><label for="token">Token</label></div>
       <div class="ui-grid-col-8">
-        <p-dropdown [options]="tokenAddressMapping" [(ngModel)]="tempChannel.token_address" id="token" placeholder="Select a Token" [style]="{'width':'100%'}" appendTo="body" autoWidth="false" [filter]="true"></p-dropdown>
+        <p-dropdown [options]="tokenAddressMapping$ | async" [(ngModel)]="tempChannel.token_address" id="token" placeholder="Select a Token" [style]="{'width':'100%'}" appendTo="body" autoWidth="false" [filter]="true"></p-dropdown>
       </div>
     </div>
     <div class="ui-grid-row top10">
