--- a/raiden/ui/web/src/app/components/token-network/token-network.component.html
+++ b/raiden/ui/web/src/app/components/token-network/token-network.component.html
@@ -1,17 +1,23 @@
-<p-dataTable [value]="tokenBalances" [(selection)]="selectedToken" dataKey="address">
+<div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
+  <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+  <input #gb type="text" pInputText size="50" placeholder="Filter" class="ui-inputtext ui-corner-all ui-state-default">
+</div>
+<p-dataTable *ngIf="(tokensBalances$ | async) || []; let tokens" [value]="tokens" [(selection)]="selectedToken" dataKey="address" [paginator]="true" [rows]="10" [globalFilter]="gb" resizableColumns="true">
+  <p-header><strong>Tokens [{{ tokens.length }}]</strong></p-header>
   <p-column selectionMode="single" [style]="{'width':'2.3em'}"></p-column>
-  <p-column field="symbol" header="Symbol" [style]="{'width':'5em', 'text-align': 'center'}"></p-column>
-  <p-column field="address" header="Address">
+  <p-column field="symbol" header="Symbol" [style]="{'width':'7em', 'text-align': 'center'}" [sortable]="true"></p-column>
+  <p-column field="address" header="Address" [sortable]="true">
     <ng-template let-col let-data="rowData" pTemplate="body">
       <span [title]="data[col.field]">{{ data[col.field] }}</span>
     </ng-template>
   </p-column>
-  <p-column field="name" header="Name"></p-column>
-  <p-column field="balance" header="Balance" [style]="{width: '5em', 'text-align': 'center'}"></p-column>
+  <p-column field="name" header="Name" [sortable]="true"></p-column>
+  <p-column field="balance" header="Balance" [style]="{width: '10em', 'text-align': 'center'}" [sortable]="true"></p-column>
   <p-footer>
     <div class="ui-helper-clearfix button-pane">
       <button type="button" pButton icon="fa-plus" class="pull-left" (click)="showJoinDialogBox()" label="Join Token Network"></button>
       <button type="button" pButton icon="fa-pencil" class="pull-left" (click)="showRegisterDialog(true)" label="Register New Token"></button>
+      <button type="button" pButton icon="fa-refresh" class="pull-left" [disabled]="refreshing" (click)="refreshTokens()" [label]="refreshing ? 'Refreshing' : 'Refresh Tokens'"></button>
     </div>
   </p-footer>
 </p-dataTable>
