Swap Tokens functionality!
Add Balances > Swap Tokens dialog, which allows to atomically and
directly exchange tokens with a partner.
It also provides an easy way for exchanging symetric informations (to
Taker), through an weakly check-summed string, that can be copied and
sent to Taker, who can then fill all informations only by pasting this
string in the proper field.

--- a/raiden/ui/web/src/app/app.component.html
+++ b/raiden/ui/web/src/app/app.component.html
@@ -9,19 +9,18 @@
     <ul id="menu-content" class="menu-content collapse out">
       <li>
         <a routerLink='/home' routerLinkActive="active">
-                    <i class="fa fa-dashboard fa-lg"></i>Home
-                </a>
+          <i class="fa fa-dashboard fa-lg"></i>Home
+        </a>
       </li>
       <li>
         <a routerLink='/channels' routerLinkActive="active">
-                  <i class="fa fa-user-plus fa-lg"></i>Channels
-                </a>
+          <i class="fa fa-user-plus fa-lg"></i>Channels
+        </a>
       </li>
-
       <li>
         <a routerLink='/balances' routerLinkActive="active">
-                  <i class="fa fa-money fa-lg"></i>Balances
-                </a>
+          <i class="fa fa-money fa-lg"></i>Balances
+        </a>
       </li>
     </ul>
   </div>
@@ -32,5 +31,5 @@
     <!-- Routed views go here -->
   </div>
 
-  <p-growl [(value)]="sharedService.messages"></p-growl>
+  <p-growl [(value)]="sharedService.messages" [life]="10000"></p-growl>
 </div>
