--- a/raiden/ui/web/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/ui/web/src/app/components/channel-table/channel-table.component.html
@@ -1,9 +1,11 @@
 <p-tabView class="ui-g-12" [activeIndex]="tabIndex" [controlClose]="true" (onClose)="handleCloseTab($event)" (onChange)="handleChangeTab($event)">
   <p-tabPanel header="Channels">
-    <div class="ui-g-12">
-      <button type="text" (click)="onOpen()" pButton icon="fa-external-link-square" label="Open Channel"></button>
+    <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
+      <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+      <input #gb type="text" pInputText size="50" placeholder="Filter" class="ui-inputtext ui-corner-all ui-state-default">
     </div>
-    <p-dataTable [value]="channels$ | async" class="ui-g-12" resizableColumns="true">
+    <p-dataTable *ngIf="(channels$ | async) || []; let channels" [value]="channels" [globalFilter]="gb" resizableColumns="true">
+      <p-header><strong>Channels [{{ channels.length }}]</strong></p-header>
       <p-column field="channel_address" header="Channel">
         <ng-template let-col let-data="rowData" pTemplate="body">
           <span [title]="data[col.field]">{{ data[col.field] }}</span>
@@ -23,16 +25,21 @@
       <p-column field="state" header="State" [style]="{width: '70px', 'text-align': 'center'}"></p-column>
       <p-column field="settle_timeout" header="SettleTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
       <p-column field="reveal_timeout" header="RevealTimeout" [style]="{width: '100px', 'text-align': 'center'}"></p-column>
-      <p-column [style]="{width: '100px', 'text-align': 'center'}">
+      <p-column header="Actions" [style]="{width: '6em', 'text-align': 'center'}">
         <ng-template let-channel="rowData" pTemplate="body">
           <p-menu #menu popup="popup" [model]="channel.menu" appendTo="body"></p-menu>
           <button pButton #menuButton type="button" icon="fa-ellipsis-v" class="ui-button-secondary" (click)="menu.toggle($event)"></button>
         </ng-template>
       </p-column>
+      <p-footer>
+        <div class="ui-helper-clearfix button-pane">
+          <button pButton type="button" class="pull-left" (click)="onOpen()" icon="fa-external-link-square" label="Open Channel"></button>
+        </div>
+      </p-footer>
     </p-dataTable>
   </p-tabPanel>
 
-  <p-tabPanel *ngFor="let eventsParam of watchEvents" [header]="eventsParam.channel ? 'Channel Events: '+eventsParam.channel : 'Network Events'" [closable]="!!eventsParam.channel" [leftIcon]="eventsParam.activity ? 'fa-bell' : ''">
+  <p-tabPanel *ngFor="let eventsParam of watchEvents" [header]="'Channel Events: '+eventsParam.channel" [closable]="true" [leftIcon]="eventsParam.activity ? 'fa-bell' : ''">
     <app-event-list [eventsParam]="eventsParam" (activity)="handleActivity(eventsParam)"></app-event-list>
   </p-tabPanel>
 </p-tabView>
